--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -824,7 +824,7 @@ hr {
 **********************/
 
 .chart-container{
-    position: relative;
+    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: flex-right;
@@ -832,8 +832,8 @@ hr {
 
     width: 600px;
     height: 400px;
-    top: 30px;
-    right: -600px;
+    top: 1em;
+    right: 4em;
     z-index: 1;
 }
 
