bug fixing: changing code to fit db

--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -188,7 +188,7 @@
                 </div>
             </div>
         </div>
-        <div class="timeline-container">
+        <!--<div class="timeline-container">
             <div class="btn-group btn-group-toggle justify-content-start" id="timeline-nav" data-toggle="buttons">
                 <label class="btn btn-secondary">
                     <input type="radio" name="options" id="previous" autocomplete="off" value="previous">
@@ -231,7 +231,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 
 {% endblock content %}
