--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -103,7 +103,7 @@
         </div>-->
         <div class="depth-container left-transition" id="left-slider">
             <div class="depth-title-wrapper">
-                <div class="description default-text-small">Depth in m</div>
+                <div class="description default-text-small">Tiefe in m</div>
                 <button class="btn btn-primary btn-sm" id="depth-slider" >
                     <span class="material-icons md-18 right" id="depth_chevron">chevron_right</span>
                 </button>
@@ -133,7 +133,7 @@
         </div>
         <div class="temperature-container right-transition" id="right-slider">
             <div class="temperature-title-wrapper">
-                <div class="description default-text-small">Temperature in °C</div>
+                <div class="description default-text-small">Temperatur in °C</div>
                 <button class="btn btn-primary btn-sm" id="temperature-slider">
                     <span class="material-icons md-18 left" id="temperature_chevron">chevron_left</span>
                 </button>
