WP031 adding trumpet chart to view

--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -131,6 +131,9 @@
                 <span class="material-icons md-18 close">close</span>
             </button>
         </div>
+        <div class="chart-container" id="chart2-container" style="top: 25em; right: 4em;">
+            <canvas id="trumpetChart" width="600" height="400"></canvas>
+        </div>
         <div class="temperature-container right-transition" id="right-slider">
             <div class="temperature-title-wrapper">
                 <div class="description default-text-small">Temperature in °C</div>
