--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 /****************
-* Colour Scheme *
+* Color Scheme *
 ****************/
 :root{
     --primary: #2BB3C0;
@@ -839,6 +839,25 @@ hr {
 
 #tempChart{
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+
+    position: static;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+
+    background: #FAFCFE;
+    border: 1px solid rgba(0, 32, 74, 0.05);
+    border-radius: 12px;
+
+    flex: none;
+}
+
+#trumpetChart{
+    z-index: 2;
     display: flex;
     flex-direction: column;
     padding: 40px;
