--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -19,7 +19,7 @@
 
 {% block footer_javascript_page %}
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
     <script src="{% static 'cgmap/basemap.js' %}"></script>
     {# to get access from view in external js files #}
     {{grid_data|json_script:"grid_data"}}
@@ -131,7 +131,7 @@
                 <span class="material-icons md-18 close">close</span>
             </button>
         </div>
-        <div class="chart-container" id="chart2-container" style="top: 25em; right: 4em;">
+        <div class="chart-container" id="chart2-container" style="top: 27em; right: 4em;">
             <canvas id="trumpetChart" width="600" height="400"></canvas>
         </div>
         <div class="temperature-container right-transition" id="right-slider">
