WP032 adding functions for ineractive ground profile chart and including first chart into view.

--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -134,6 +134,9 @@
         <div class="chart-container" id="chart2-container" style="top: 27em; right: 4em;">
             <canvas id="trumpetChart" width="600" height="400"></canvas>
         </div>
+        <div class="chart-container" id="chart3-container" style="top: 27em; left: 4em;">
+            <canvas id="groundProfile" width="600" height="400"></canvas>
+        </div>
         <div class="temperature-container right-transition" id="right-slider">
             <div class="temperature-title-wrapper">
                 <div class="description default-text-small">Temperature in °C</div>
