--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -832,12 +832,33 @@ hr {
 
     width: -moz-fit-content;
     width: fit-content;
-
     height: -moz-fit-content;
     height: fit-content;
-    top: 1em;
-    right: 4em;
+
     z-index: 1;
+}
+
+.nav .chart-container{
+    display: flex;
+
+    height: 420px;
+    width: 685px;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff;
+    background-color: var(--primary);
+}
+
+a {
+    color: var(--primary);
+    text-decoration: none;
+    background-color: transparent;
+}
+
+.canvas-container{
+    height: 600px;
+    width: 800px;
 }
 
 #tab-nav{
@@ -862,16 +883,13 @@ hr {
     z-index: 1;
     display: flex;
     flex-direction: column;
-    padding: 40px;
 
-    position: static;
     left: 0%;
-    right: 0%;
     top: 0%;
+    right: 0%;
     bottom: 0%;
 
     background: #FAFCFE;
-    border: 1px solid rgba(0, 32, 74, 0.05);
     border-radius: 12px;
 
     flex: none;
@@ -881,16 +899,13 @@ hr {
     z-index: 2;
     display: flex;
     flex-direction: column;
-    padding: 40px;
 
-    position: static;
     left: 0%;
     right: 0%;
     top: 0%;
     bottom: 0%;
 
     background: #FAFCFE;
-    border: 1px solid rgba(0, 32, 74, 0.05);
     border-radius: 12px;
 
     flex: none;
@@ -900,16 +915,13 @@ hr {
     z-index: 2;
     display: flex;
     flex-direction: column;
-    padding: 40px;
 
-    position: static;
     left: 0%;
     right: 0%;
     top: 0%;
     bottom: 0%;
 
     background: #FAFCFE;
-    border: 1px solid rgba(0, 32, 74, 0.05);
     border-radius: 12px;
 
     flex: none;
