--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -125,42 +125,40 @@
                 </div>
             </div>
         </div>
-        <div class="chart-container" id="tab-nav" style="display: none;">
+        <div class="nav chart-container" id="tab-nav" style="display: none;">
             <ul class="nav nav-pills nav-jt">
                <li class="nav-item"><a class="nav-link active" href="#first" data-toggle="tab">Annual Soil Temperature Chart</a></li>
                <li class="nav-item"><a class="nav-link" id="bs-tab2" href="#second" data-toggle="tab">Soil Temperature Trumpet Chart</a></li>
+               <li class="nav-item"><a class="nav-link" id="bs-tab3" href="#third" data-toggle="tab">Ground Profile Chart</a></li>
             </ul>
             <!--<button class="btn btn-primary btn-sm" type="button" id="close-btn" style="width: 18px;height: 18px;">
                 <span class="material-icons md-18 close">close</span>
-<<<<<<< HEAD
-            </button>-->
+            </button>
+            </div>-->
             <div class="tab-content" id="tab-content">
                 <div id="first" class="tab-pane fade active in">
-                    <div class="chart-container" id="chart-container">
-                        <canvas id="tempChart" width="600" height="400"></canvas>
+                    <div class="canvas-container" id="chart-container">
+                        <canvas id="tempChart" width="800" height="600"></canvas>
                     </div>
                 </div>
-                <div id="second" class="tab-pane">
-                    <div class="chart-container" id="chart2-container" style="top: 25em; right: 4em;">
-                        <canvas id="trumpetChart" width="600" height="400"></canvas>
+                <div id="second" class="tab-pane fade">
+                    <div class="canvas-container" id="chart2-container" >
+                        <canvas id="trumpetChart" width="800" height="600"></canvas>
+                    </div>
+                </div>
+                <div id="third" class="tab-pane fade">
+                    <div class="canvas-container" id="chart3-container" >
+                        <canvas id="groundProfile" width="800" height="600"></canvas>
                     </div>
                 </div>
             </div>
+            <!--<div class="chart-container" id="chart2-container" style="top: 27em; right: 4em;">
+                <canvas id="trumpetChart" width="600" height="400"></canvas>
+            </div>
+            <div class="chart-container" id="chart3-container" style="top: 27em; left: 4em;">
+                <canvas id="groundProfile" width="600" height="400"></canvas>
+            </div>-->
         </div>
-
-
-
-
-=======
-            </button>
-        </div>
-        <div class="chart-container" id="chart2-container" style="top: 27em; right: 4em;">
-            <canvas id="trumpetChart" width="600" height="400"></canvas>
-        </div>
-        <div class="chart-container" id="chart3-container" style="top: 27em; left: 4em;">
-            <canvas id="groundProfile" width="600" height="400"></canvas>
-        </div>
->>>>>>> map
         <div class="temperature-container right-transition" id="right-slider">
             <div class="temperature-title-wrapper">
                 <div class="description default-text-small">Temperature in °C</div>
