--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="nav chart-container" id="tab-nav" style="display: none;">
             <ul class="nav nav-pills nav-jt">
-               <li class="nav-item"><a class="nav-link active" href="#first" data-toggle="tab">Annual Soil Temperature Chart</a></li>
+               <li class="nav-item"><a class="nav-link active" id="bs-tab1" href="#first" data-toggle="tab">Annual Soil Temperature Chart</a></li>
                <li class="nav-item"><a class="nav-link" id="bs-tab2" href="#second" data-toggle="tab">Soil Temperature Trumpet Chart</a></li>
                <li class="nav-item"><a class="nav-link" id="bs-tab3" href="#third" data-toggle="tab">Ground Profile Chart</a></li>
             </ul>
@@ -136,7 +136,7 @@
             </button>
             </div>-->
             <div class="tab-content" id="tab-content">
-                <div id="first" class="tab-pane fade active in">
+                <div id="first" class="tab-pane fade in active show">
                     <div class="canvas-container" id="chart-container">
                         <canvas id="tempChart" width="800" height="600"></canvas>
                     </div>
