--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -61,7 +61,7 @@
 
         $('#close-btn').on('click', function(){
             console.log("container has been closed");
-            document.getElementById('chart-container').style.display = "none";
+            document.getElementById('tab-nav').style.display = "none";
         });
 
         function open_graph(){
@@ -126,15 +126,14 @@
             </div>
         </div>
         <div class="nav chart-container" id="tab-nav" style="display: none;">
+            <!--<button class="btn btn-primary btn-sm" type="button" id="close-btn" style="width: 18px;height: 18px;">
+                <span class="material-icons md-18 close">close</span>
+            </button>-->
             <ul class="nav nav-pills nav-jt">
                <li class="nav-item"><a class="nav-link active" id="bs-tab1" href="#first" data-toggle="tab">Annual Soil Temperature Chart</a></li>
                <li class="nav-item"><a class="nav-link" id="bs-tab2" href="#second" data-toggle="tab">Soil Temperature Trumpet Chart</a></li>
                <li class="nav-item"><a class="nav-link" id="bs-tab3" href="#third" data-toggle="tab">Ground Profile Chart</a></li>
             </ul>
-            <!--<button class="btn btn-primary btn-sm" type="button" id="close-btn" style="width: 18px;height: 18px;">
-                <span class="material-icons md-18 close">close</span>
-            </button>
-            </div>-->
             <div class="tab-content" id="tab-content">
                 <div id="first" class="tab-pane fade in active show">
                     <div class="canvas-container" id="chart-container">
@@ -152,12 +151,6 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="chart-container" id="chart2-container" style="top: 27em; right: 4em;">
-                <canvas id="trumpetChart" width="600" height="400"></canvas>
-            </div>
-            <div class="chart-container" id="chart3-container" style="top: 27em; left: 4em;">
-                <canvas id="groundProfile" width="600" height="400"></canvas>
-            </div>-->
         </div>
         <div class="temperature-container right-transition" id="right-slider">
             <div class="temperature-title-wrapper">
