--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -14,13 +14,19 @@
         .leaflet-container { height: 100%; overflow: hidden}
         {#.leaflet-tile { border: solid black 2px; }#}
     </style>
-    <link rel="stylesheet" type="text/css" href="{% static 'cgmap/style.css' %}">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet-geosearch@3.5.0/dist/geosearch.css"
+    />
+    <link rel="stylesheet" type="text/css" href="{% static 'cgmap/style.css' %}"/>
 {% endblock head_css_page %}
 
 {% block footer_javascript_page %}
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
-    <script src="{% static 'cgmap/basemap.js' %}"></script>
+    <script type="module" src="{% static 'cgmap/basemap.js' %}"></script>
+    <!-- Make sure you put this AFtER leaflet.js, when using with leaflet -->
+    <script src="https://unpkg.com/leaflet-geosearch@3.5.0/dist/geosearch.umd.js"></script>
     {# to get access from view in external js files #}
     {{grid_data|json_script:"grid_data"}}
     {{context|json_script:"context"}}
