--- a/cgmap/templates/header.html
+++ b/cgmap/templates/header.html
@@ -35,7 +35,7 @@
                 <button class="dropdown-item" type="button"><a href="{% url 'legal' %}">Datenschutz</a></button>
                 <button class="dropdown-item" type="button"><a href="{% url 'contact' %}">Kontakt</a></button>
             </div>
-        </div>
+        </div><!--
         <div class="dropdown">
             <button class="btn btn-secondary" type="button" id="dropdownMenuSearch" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
                 <span class="material-icons" aria-hidden="true">&#xE8B6;</span>
@@ -46,6 +46,6 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
-        </div>
+        </div>-->
     </div>
 </header>
